tests/baselines/reference/checkJsdocReturnTag2.errors.txt
tests/cases/conformance/jsdoc/returns.js(6,5): error TS2322: Type '5' is not assignable to type '文字'.
tests/cases/conformance/jsdoc/returns.js(13,5): error TS2322: Type '为真 | 5' is not assignable to type '文字 | 数字'.
  Type '为真' is not assignable to type '文字 | 数字'.


==== tests/cases/conformance/jsdoc/returns.js (2 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
     */
    function f() {
        return 5;
        ~~~~~~~~~
!!! error TS2322: Type '5' is not assignable to type '文字'.
    }
    
    /**
     * @returns {string | number} This comment is not currently exposed
     */
    function f1() {
        return 5 || true;
        ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '为真 | 5' is not assignable to type '文字 | 数字'.
!!! error TS2322:   Type '为真' is not assignable to type '文字 | 数字'.
    }